--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <h1>My Mad-Lib</h1>
     <script>
-        var animal = prompt("Name a kind of animal");
+        var noun = prompt("List a type of noun");
         var place = prompt("Name a place");
-        var food = prompt("Name a food");
-        document.write("Here is a story for you!<br>");
-        document.write("The inconsiderate " + animal + " strode proudly through " + place + ", dropping " + food + " everywhere.");  
+        var verb = prompt("List a verb/action");
+        document.write("Now do I have a story for you!<br>");
+        document.write("The great and powerful " + noun + " ventured on a mighty quest to " + place + ", performing " + verb + " everywhere.");  
     </script>
 </body>
 
